<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>org.netxms</groupId>
  <artifactId>netxms-client</artifactId>
  <packaging>jar</packaging>
  <version>3.5-SNAPSHOT</version>
  <name>netxms-client</name>
  <description>NetXMS client library - complete JAVA API</description>
  <url>http://www.netxms.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <build.finalName>${project.artifactId}-${project.version}</build.finalName>
  </properties>

  <licenses>
    <license>
      <name>GNU General Public License (GPL) v2</name>
      <url>http://www.gnu.org/licenses/gpl2.txt</url>
    </license>
  </licenses>
  <scm>
    <connection>scm:git:https://git.netxms.org/public/netxms.git</connection>
    <developerConnection>scm:git:ssh://git.netxms.org/public/netxms.git</developerConnection>
    <url>http://git.netxms.org/public/netxms.git/shortlog/refs/heads/develop</url>
  </scm>
  <developers>
    <developer>
      <id>alex.kirhenshtein</id>
      <name>Alex Kirhenshtein</name>
      <email>alk@netxms.org</email>
      <organization>Raden Solutions</organization>
      <organizationUrl>http://www.radensolutions.com</organizationUrl>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>Europe/Riga</timezone>
    </developer>
  </developers>
  <issueManagement>
    <system>Redmine</system>
    <url>https://dev.raden.solutions/projects/netxms</url>
  </issueManagement>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
  </distributionManagement>

  <build>
    <finalName>${build.finalName}</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <encoding>utf-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.0.1</version>
	<configuration>
          <source>8</source>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>         
            <goals>
              <goal>jar</goal>
            </goals>
            <configuration>
              <failOnError>false</failOnError>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.0.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>1.6.7</version>
        <extensions>true</extensions>
        <configuration>
          <serverId>ossrh</serverId>
          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
          <autoReleaseAfterClose>false</autoReleaseAfterClose>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>org.netxms</groupId>
      <artifactId>netxms-base</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.simpleframework</groupId>
      <artifactId>simple-xml</artifactId>
      <version>2.6.4</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.1.0</version>
         <configuration>
           <source>8</source>
           <includeDependencySources>true</includeDependencySources>
           <!--<sourcepath>../../../java/client/mobile-agent:./:../../../libnxjava/java/base/netxms-base/src/main/java</sourcepath>-->
           <dependencySourceExcludes>
             <dependencySourceExclude>org.simpleframework:*</dependencySourceExclude>
             <dependencySourceExclude>junit:*</dependencySourceExclude>
             <dependencySourceExclude>org.junit:*</dependencySourceExclude>
           </dependencySourceExcludes>
         </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>3.3</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>2.7</version>
      </plugin>
    </plugins>
  </reporting>

  <profiles>
    <profile>
      <id>default</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.18.1</version>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>publish</id>
        <build>
          <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.6</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>pkg-build</id>
      <properties>
        <build.finalName>${project.artifactId}</build.finalName>
      </properties>
    </profile>
  </profiles>
</project>
